monitoring/grafana/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: lab-gateway
    namespace: nginx-gateway
  hostnames:
  - "grafana.ui.stark.labs" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: / # <--- Catching EVERYTHING at the root
    backendRefs:
    - name: grafana # <--- Your confirmed service name
      port: 80 # <--- Service port
